[Saurabh Yeggewar] Refactor All APIs with  userId
